kubefiles/warehouse-service/optional/kind_warehouse_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: warehouse
  name: warehouse-service-ingress
  namespace: warehouse
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: warehouse-service
          servicePort: 8082
        path: /
        # path: /warehouse(/|$)(.*)
