kubefiles/warehouse-service/optional/openshift_warehouse_route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: warehouse-service
  name: warehouse-service
  namespace: warehouse
spec:
  to:
    kind: Service
    name: warehouse-service
    weight: 100
